# yteeee

./: .gitignore  Cargo.toml  README.md  TODO.md  static.en.json3
migrations/2023-12-16-163514_tasks/: up.sql
src/: api.rs  db.rs  google_oauth.rs  json3.rs  lib.rs  main.rs  route.rs  schema.rs  task.rs  ws.rs  yt_dlp.rs
static/: data.txt  json3_sub.json
ui/: package.json  pnpm-lock.yaml
ui/components/: Navbar.tsx  SummarizeVideoForm.tsx
ui/layouts/: index.tsx
ui/pages/: index.tsx
ui/utils/: api.ts
