[package]
name = "yteeee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
anyhow = "1.0.75"
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
qstring = "0.7.2"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = "1.34.0"
actix-web-actors = "4.1"
actix = "0.13"
actix-rt = "2.2"                                       # <-- Runtime for actix
chrono = { version = "0.4.23", features = ["serde"] }
jsonwebtoken = "9.2.0"
dotenv = "0.15.0"
diesel = { version = "2.1.0", features = ["sqlite"] }
uuid = { version = "1.6.1", features = ["v4"] }
